# OmniServe

./: .env.example  LICENSE  MODEL_REVIEW_NOTES.md  NOTICE  README.md  convert_model.py  docker-compose.yml
decoder/audio/: test-audio-by-omni.sh  test-omni-base-64-decoder.py
decoder/audio/codec/: Dockerfile  config.properties  entrypoint.sh  requirements.txt  setup.py
decoder/audio/codec/examples/k8s/: configs.yaml  deployments.yaml
decoder/audio/codec/src/audiollm/decoder/unit_bigvgan/: handler_concrete.py  handler_concrete_zeroshot.py  model_concrete.py  model_concrete_zeroshot.py  utils.py  warmup.py
decoder/audio/codec/src/audiollm/decoder/unit_bigvgan/modules/: __init__.py  bigvgan.py  (+2 more)
decoder/audio/codec/src/audiollm/utils/: __init__.py  audio_utils.py
decoder/audio/track_b/: requirements.txt
decoder/audio/track_b/app/: configs.py  decoders.py  exceptions.py  main.py  references.py  server_types.py
decoder/audio/track_b/examples/: speaker_config.json
decoder/vision/: .dockerignore  .gitignore
decoder/vision/track_b/: inference.py  requirements.txt  serve.py
docker/: omni_chainer.dockerfile  omni_decoder_audio.dockerfile  omni_decoder_vision.dockerfile  omni_encoder_audio.dockerfile  omni_encoder_vision.dockerfile  vllm.dockerfile  vlm_encoder_vision.dockerfile
encoder/audio/: .gitignore
encoder/audio/track_b/: config.json  requirements.txt  run_and_test.sh  test_cosyvoice_sdpa_comparison.py  test_server.sh
encoder/audio/track_b/app/: server.py
encoder/audio/track_b/app/model/: __init__.py  cosyvoice.py  mambamia_videoaudio_compressor.py
encoder/audio/track_b/app/model/configs/: audio_config.json
encoder/audio/track_b/app/model/weights/qwen2-audio-encoder-from-qwen2-audio-7b-instruct/: config.json
encoder/vision/: .gitignore
encoder/vision/track_a/: config.json  requirements.txt  run_dev.sh
encoder/vision/track_a/app/: server.py
encoder/vision/track_a/app/model/: __init__.py  processing_vlm.py  qwen_vision_process.py
encoder/vision/track_a/app/model/configs/: 32b_cont_config.yaml  preprocessor_config.json
encoder/vision/track_b/: config.json  requirements.txt  run_and_test.sh  test_forward.py  test_hcx_processor.py  test_process_image_or_video.sh  test_server.py  test_simple.py
encoder/vision/track_b/app/: server.py
encoder/vision/track_b/app/model/: __init__.py  qwen_vision_process.py  ta_tok.py
model_converter/: README.md  __init__.py  cli.py  config_utils.py  converter.py  weight_utils.py
omni_chainer/: .gitignore  pyproject.toml
omni_chainer/omni_chainer/: logging.py  main.py
omni_chainer/omni_chainer/api/: main.py
omni_chainer/omni_chainer/api/routes/: __init__.py
omni_chainer/omni_chainer/api/routes/openai/v1/: chat.py
omni_chainer/omni_chainer/core/: __init__.py  config.py
omni_chainer/omni_chainer/core/omni/: _tools.py  track_a.py  track_b.py
omni_chainer/omni_chainer/core/openai/v1/: _tools.py  track_a.py  track_b.py
omni_chainer/omni_chainer/models/openai/v1/chat/: completions.py
omni_chainer/omni_chainer/scripts/: run_uvicorn.py
omni_chainer/tests/chat_template/track_a/: chat_template.jinja  test_chat_template.py
omni_chainer/tests/chat_template/track_b/: chat_template.jinja  test_chat_template.py
scripts/: check_server.sh
util/storage/: .gitignore  README.md  example_usage.py  install_from_s3.py  pyproject.toml
util/storage/.github/workflows/: deploy-to-s3.yml
util/storage/wbl_storage_utility/: README.md  example_usage.py  pyproject.toml
util/storage/wbl_storage_utility/common/: __init__.py  storage_interface.py
util/storage/wbl_storage_utility/redis_util/: redis_connection.py
util/storage/wbl_storage_utility/s3_util/: __init__.py  s3_connection.py
util/storage/wbl_storage_utility/wbl_storage_utility/redis_util/: __init__.py  redis_connection.py
util/storage/wbl_storage_utility/wbl_storage_utility/s3_util/: s3_connection_test.py
vllm-plugins/: .gitignore  requirements.txt
vllm-plugins/model/: vllm_hyperclovax.py
vllm-plugins/parser/: hcx_tool_parser.py
vllm/vllm/: sampling_params.py
vllm/vllm/config/: __init__.py  model.py  vllm.py
vllm/vllm/engine/: arg_utils.py
vllm/vllm/entrypoints/openai/: embedding_processor.py  protocol.py  serving_chat.py  serving_completion.py
vllm/vllm/entrypoints/openai/tool_parsers/: __init__.py  omni_tool_parser.py
vllm/vllm/multimodal/: registry.py
vllm/vllm/reasoning/: deepseek_r1_reasoning_parser.py
vllm/vllm/transformers_utils/: tokenizer.py
vllm/vllm/v1/sample/logits_processor/: __init__.py
vllm/vllm/v1/worker/: gpu_model_runner.py
