[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbl-storage-util"
version = "0.1.0"
description = "Storage utilities for S3 and Redis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3==1.41.5",
    "botocore==1.41.5",
    "requests>=2.26.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
